--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -3,7 +3,7 @@
 $color-bg: #203a44;
 $color-primary: #ec7d16;
 $color-scrollbar: #3c5f6d;
-$scrollbar-width: 5px;
+$scrollbar-width: 7px;
 
 // Shadows
 @function pulled-shadow($x, $y) {
